 - Locked down versions in the Gemfiles
 - Updated Team form to handle changes to formtastic gem
 - Removed Organization from Provider pages
 - Added force_unsecure_communications: true to the development environment
 - Added teams and team_names to User model
 - Fixed Provider filters on the measures page to display all providers, rather than only the first 20
 
TO BE DONE
 - The pagination on the Providers page breaks after an edit (haven't checked if an add also breaks it)