@@ -6,24 +6,34 @@
 					<%= flash[:error] %>
 				</div>
 			<% end %>
-			
+
 			User: <%= @user.first_name + " " + @user.last_name %>
 			<br /><br />
+	    	<table>
+				<tr><th colspan="2">Current Teams</th></tr>
+				<% if (@user.teams && @user.teams.count > 0) %>
+					<% @user.teams.each do |team| -%>
+						<tr style="vertical-align: middle;">
+							<td align="left"><%= MONGO_DB['teams'].find({_id: team}).to_a[0]["name"] %></td>
+							<td align="right" width="30px">
+							    <%= form_for(:remove_team, :controller => "admin", :action => "edit_teams", :id => @id) do |f| %>
+							    	<%= f.hidden_field :team_id, :value => team %>
+									<%= submit_tag "X", {class: "userTeam", style: "width: 25px", confirm: "Are you sure?"} %>
+							    <% end %>
+							</td>
+						</tr>
+					<% end %>
+				<% else %>
+					<tr><td>No teams</td><td>&nbsp;</td></tr>
+				<% end %>
+			</table>
+			<br />
 		    <%= form_for(:add_team, :controller => "admin", :action => "edit_teams", :id => @id) do |f| %>
 		    	<table>
-					<th><td colspan="3">Current Teams</td></th>
-					<% if (@user.teams && @user.teams.count > 0) %>
-						<% @user.team_names.each do |team| -%>
-							<tr><td colspan="3"><%= team %></td></tr>
-						<% end %>
-					<% else %>
-						<tr><td colspan="3">No teams</td></tr>
-					<% end %>
-					<tr><td colspan="3">&nbsp;</td></tr>
 		    		<tr>
 		    			<td style="vertical-align: top; width: 75px;"><%= f.label :team %></td>
 		    			<td style="vertical-align: top; width: 200px;"><%= f.collection_select :team_id, Team.alphabetical, :id, :name, {include_blank: true}, {style: "width:175px"}%></td>
-		    			<td style="vertical-align: top; width: 125px;"><%= f.submit "Add Team", {class: "exportReport", style: "width:100px"} %></td>
+		    			<td style="vertical-align: top; width: 125px;"><%= f.submit "Add Team", {class: "userTeam", style: "width:100px"} %></td>
 		    		</tr>
 		    	</table>
 		    <% end %>
